finished personal website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PERSONAL WEBSITE ASSIGNMENT</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,32 +19,43 @@
             <img src="Images/personal-website/peter.png" alt="">
         </div>
     </section>
-    <section class="second-banner">
+    <section class="bio-bg">
         <div class="half-width">
             <img src="Images/personal-website/peter_dream.png" alt="">
         </div>
         <div class="half-width">
             <h1>Biography</h1>
-            <p>Duis condimentum aliquam felis, nec sagittis mi imperdiet eu. Cras sit amet cursus ante. Nulla eu massa sem. Ut finibus orci at purus ultrices, non dapibus ex luctus. Morbi sit amet velit elit.
-            </p>
+            <p>Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's standerd dummy text ever since 1500s, when an unknown printer took a galley of type and scarmbled it to make a type</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero">Download CV</a>
         </div>
     </section>
-    <section>
-        <h1>My Latest Work</h1>
-        <div class="width">
-            <img src="Images/personal-website/latest-work/work-1.png" alt="">
+    <section class="latest-work-banner">
+            <h1 class="text-align">My Latest Work</h1>
+            <div class="column">
+              <img src="Images/personal-website/latest-work/work-1.png" alt="" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="Images/personal-website/latest-work/work-2.jpg" alt="" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="Images/personal-website/latest-work/work-3.jpg" alt="" style="width: 100%;">
+            </div>
+    </section>
+    <section class="last-bg">
+        <div class="about-me">
+            <h1>What Client are say</h1>
+            <h5>Bruce Moccy</h5>
+            <h6>Founder & CEO Alies</h6>
+            <p>"Lorem Ipsum is simply dummy text of the printing and typesetting insdustry. Lorem Ipsum"</p>
         </div>
-        <div class="width">
-            <img src="Images/personal-website/latest-work/work-2.jpg" alt="">
-        </div>
-        <div class="width">
-            <img src="images/personal-website/latest-work/work-3.jpg" alt="">
+        <div class="message-box">
+            <p class="mail-paragraph">Leave me a message</p>
+            <p class="mail-address">snakebite107@gmail.com</p>
         </div>
     </section>
-    <section>
-        <h1>What Client are say</h1>
-    </section>
-    
+    <footer>
+        <p>© All right reserved.</p>
+    </footer>
+
 </body>
 </html>
